feat: add Cypress support and improve quiz components
- Added Cypress configuration and support files for end-to-end testing.
- Introduced new Quiz components: QuizSentence, QuizOptionList, QuizOptionButton, and QuizAnswerFeedback.
- Updated QuizGrid layout for better spacing.
- Refactored quiz interface to simplify text handling.
- Enhanced ESLint and Babel configurations.
- Updated index.html with a new title and description.
- Removed obsolete QuizQuestion component.
- Implemented a script to remove old quiz files.

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/images/d-quiz_logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>D-Quiz - Interactive Quiz Game</title>
+    <meta name="description" content="D-Quiz is an interactive quiz game application that allows users to test their knowledge through various quiz categories. Enjoy a modern UI, responsive design, and score tracking. Play again and again to improve your skills!">
   </head>
   <body>
     <div id="root"></div>
